--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -183,15 +183,18 @@
 {%- endif -%}
 
 {% comment %} START 311 {% endcomment %}
-{% assign bigYellowBag = all_products['copy-of-soil-bulk-compost-br-delivered']%}
+{% assign totalSod = 0 %}
 {% assign isThereSod = false %}
 {% for item in cart.items %}
   {% if item.product.type == 'Sod' %}
-    {% assign isThereSod = true %}
-    {% break %}
+    {% assign totalSod = totalSod | plus: item.quantity %}
   {% endif %}
 {% endfor %}
+{% if totalSod > 0 %}
+  {% assign isThereSod = true %}
+{% endif %}
 {% if isThereSod == true %} {{ 'byb-rec-section.css' | asset_url | stylesheet_tag }} {% endif %}
+<inpu class="js-totalSod hiden" value="{{ totalSod }}"></inpu>
 {% comment %} END 311 {% endcomment %}
 
 <div class="grid">
