--- a/sections/byb-rec-section.liquid
+++ b/sections/byb-rec-section.liquid
@@ -9,7 +9,7 @@
 {% for item in cart.items %}
   {% if item.product.type == 'Sod' %}
     {% assign totalSod = totalSod | plus: item.quantity %}
-    {% assign deliveryMethod = item.properties.delivery_method %}
+    {% assign deliveryMethod = item.properties._method %}
   {% endif %}
 {% endfor %}
 
@@ -35,8 +35,8 @@
     <img src="{{ recommendedProduct | img_url: 'medium' }}" alt="{{ recommendedProduct.title }}" class="byb-rec-section__picture">
     <div class="byb-rec-section__description">
       <div class="description__prod-title">{{ recommendedProduct.title }}</div>
-      <span class="description__prod-price-compare"><strike>{{ recommendedProduct.compare_at_price | money_with_currency }}</strike></span>
-      <span class="description__prod-price">{{ recommendedProduct.price | money_with_currency }}</span>
+      <span class="description__prod-price-compare"><strike>{{ recommendedProduct.variants[variantBasedOnDeliveryMethod].compare_at_price | money_with_currency }}</strike></span>
+      <span class="description__prod-price  js-recommended-product-price" value="{{ recommendedProduct.variants[variantBasedOnDeliveryMethod].price }}">{{ recommendedProduct.price | money_with_currency }}</span>
       <div class="description-text">
         {% if totalSod >= 500 %}
           {{ section.settings.description-BigYellowBag }}
@@ -47,7 +47,7 @@
       </div>
       <div class="description-qty">
         <span class="description-qty__text">Quantity</span>
-        <input type="number" class="description-qty__input form__input form__input--quantity js-byb-quantity" value="1">
+        <input type="number" class="description-qty__input form__input form__input--quantity js-byb-quantity" value="1" min="0">
       </div>
       <input type="number" value="" class="hide totalSquareFeet">
       <iput class="hide js-minicube" value="{{ all_products["soil3-mini-cube"].id }}"></iput>
