--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -385,9 +385,9 @@
                     id="{{ item.id }}" value="{{ item.quantity }}"
                     data-input-index="{{ forloop.index }}"
                     {% if item.properties._custom_increment %}step="{{item.properties._custom_increment}}"{% else %} step="1" {% endif %}
-                    min="{% if item.properties._minimum_pickup_quantity %}{{item.properties._minimum_pickup_quantity}}{% else %}10{% endif %}">
-                  <p class="cart__error-message cart__error-message--invalid-quantity js-invalid-quantity js-invalid-quantity-{{forloop.index}} hide">Please enter quantity that is a multiple of {{ item.properties._custom_increment }}</p>
-                  <p class="cart__error-message cart__error-message--invalid-quantity js-invalid-quantity js-invalid-minimum-quantity-{{forloop.index}} hide">There is a minimum quantity of  {{ item.properties._minimum_pickup_quantity }}</p>
+                    min="{% if item.properties._minimum_pickup_quantity %}{{item.properties._minimum_pickup_quantity}}{% else %}1{% endif %}">
+                  <p class="cart__error-message cart__error-message--invalid-quantity js-invalid-quantity js-invalid-quantity-{{forloop.index}} hide">Please enter quantity that is a multiple of {% if item.properties._custom_increment %} {{ item.properties._custom_increment }} {% else %} 1 {% endif %}</p>
+                  <p class="cart__error-message cart__error-message--invalid-quantity js-invalid-quantity js-invalid-minimum-quantity-{{forloop.index}} hide">There is a minimum quantity of  {% if item.properties._minimum_pickup_quantity %} {{ item.properties._minimum_pickup_quantity }} {% else %} 1 {% endif %}</p>
                 </td>
                 <td data-label="{{ 'cart.label.total' | t }}" class="text-right cart__table-cell--line-price">
                   {%- if item.properties._custom_price != blank -%}
