--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -775,7 +775,7 @@
          "en": "Minimum pickup message ",
          "es": "mensaje de cantidad minima"
        },
-       "default": "There is a mimum pickup amount of <span class='js-minimum-quantity-alert-value'></span> for this store."
+       "default": "There is a minimum pickup amount of <span class='js-minimum-quantity-alert-value'></span> for this store."
      },
     {
       "type": "header",
